Fixed shirts container page with flexbox and flex wrap.

--- a/app/assets/javascripts/components/shirtsIndex/shirtsIndex.scss
+++ b/app/assets/javascripts/components/shirtsIndex/shirtsIndex.scss
@@ -11,6 +11,14 @@ body {
 
 	}
 
+	.shirts-body-page-container {
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+
+
+	}
+
 	.main-test-container {
 		display: flex;
 		justify-content: center;
